smort/src/translate/smtmr/SMTMRParser.py
# Generated from SMTMR.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SMTMRParser ( Parser ):

    grammarFileName = "SMTMR.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'('", "')'", "';'", "<INVALID>", 
                     "<INVALID>", "'not'", "'Bool'", "'false'", "'logic'", 
                     "'theory'", "'true'", "'sat'", "'unsat'", "'unknown'", 
                     "'!'", "'_'", "'as'", "'BINARY'", "'DECIMAL'", "'exists'", 
                     "'HEXADECIMAL'", "'forall'", "'let'", "'match'", "'NUMERAL'", 
                     "'par'", "'string'", "'seed'", "'mutant'", "'notation'", 
                     "'subst-template'", "'method'", "'fuse'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':'", "':gen'", 
                     "':var'", "':cons'", "':snippet'", "':seed'", "':free'", 
                     "':bound'" ]

    symbolicNames = [ "<INVALID>", "Comment", "ParOpen", "ParClose", "Semicolon", 
                      "String", "QuotedSymbol", "PS_Not", "PS_Bool", "PS_False", 
                      "PS_Logic", "PS_Theory", "PS_True", "PS_Sat", "PS_Unsat", 
                      "PS_Unknown", "GRW_Exclamation", "GRW_Underscore", 
                      "GRW_As", "GRW_Binary", "GRW_Decimal", "GRW_Exists", 
                      "GRW_Hexadecimal", "GRW_Forall", "GRW_Let", "GRW_Match", 
                      "GRW_Numeral", "GRW_Par", "GRW_String", "GRW_Seed", 
                      "GRW_Mutant", "GRW_Notation", "GRW_SubstTemplate", 
                      "GRW_Method", "GRW_Fuse", "Numeral", "Binary", "HexDecimal", 
                      "Decimal", "Colon", "PK_Gen", "PK_Var", "PK_Cons", 
                      "PK_Snippet", "PK_Seed", "PK_Free", "PK_Bound", "UndefinedSymbol", 
                      "WS" ]

    RULE_start = 0
    RULE_simpleSymbol = 1
    RULE_predefSymbol = 2
    RULE_predefKeyword = 3
    RULE_undefinedKeyword = 4
    RULE_symbol = 5
    RULE_keyword = 6
    RULE_status = 7
    RULE_b_value = 8
    RULE_spec_constant = 9
    RULE_s_expr = 10
    RULE_index = 11
    RULE_identifier = 12
    RULE_attribute_value = 13
    RULE_attribute = 14
    RULE_sort = 15
    RULE_qual_identifier = 16
    RULE_sorted_var = 17
    RULE_term = 18
    RULE_boolean_term_template = 19
    RULE_formula_dec = 20
    RULE_subst_pair = 21
    RULE_seed_dec = 22
    RULE_mutant_dec = 23
    RULE_notation_dec = 24
    RULE_substTemplate_dec = 25
    RULE_fuse_dec = 26
    RULE_method_dec = 27

    ruleNames =  [ "start", "simpleSymbol", "predefSymbol", "predefKeyword", 
                   "undefinedKeyword", "symbol", "keyword", "status", "b_value", 
                   "spec_constant", "s_expr", "index", "identifier", "attribute_value", 
                   "attribute", "sort", "qual_identifier", "sorted_var", 
                   "term", "boolean_term_template", "formula_dec", "subst_pair", 
                   "seed_dec", "mutant_dec", "notation_dec", "substTemplate_dec", 
                   "fuse_dec", "method_dec" ]

    EOF = Token.EOF
    Comment=1
    ParOpen=2
    ParClose=3
    Semicolon=4
    String=5
    QuotedSymbol=6
    PS_Not=7
    PS_Bool=8
    PS_False=9
    PS_Logic=10
    PS_Theory=11
    PS_True=12
    PS_Sat=13
    PS_Unsat=14
    PS_Unknown=15
    GRW_Exclamation=16
    GRW_Underscore=17
    GRW_As=18
    GRW_Binary=19
    GRW_Decimal=20
    GRW_Exists=21
    GRW_Hexadecimal=22
    GRW_Forall=23
    GRW_Let=24
    GRW_Match=25
    GRW_Numeral=26
    GRW_Par=27
    GRW_String=28
    GRW_Seed=29
    GRW_Mutant=30
    GRW_Notation=31
    GRW_SubstTemplate=32
    GRW_Method=33
    GRW_Fuse=34
    Numeral=35
    Binary=36
    HexDecimal=37
    Decimal=38
    Colon=39
    PK_Gen=40
    PK_Var=41
    PK_Cons=42
    PK_Snippet=43
    PK_Seed=44
    PK_Free=45
    PK_Bound=46
    UndefinedSymbol=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutant_dec(self):
            return self.getTypedRuleContext(SMTMRParser.Mutant_decContext,0)


        def fuse_dec(self):
            return self.getTypedRuleContext(SMTMRParser.Fuse_decContext,0)


        def EOF(self):
            return self.getToken(SMTMRParser.EOF, 0)

        def seed_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTMRParser.Seed_decContext)
            else:
                return self.getTypedRuleContext(SMTMRParser.Seed_decContext,i)


        def notation_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTMRParser.Notation_decContext)
            else:
                return self.getTypedRuleContext(SMTMRParser.Notation_decContext,i)


        def substTemplate_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTMRParser.SubstTemplate_decContext)
            else:
                return self.getTypedRuleContext(SMTMRParser.SubstTemplate_decContext,i)


        def method_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTMRParser.Method_decContext)
            else:
                return self.getTypedRuleContext(SMTMRParser.Method_decContext,i)


        def getRuleIndex(self):
            return SMTMRParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SMTMRParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 56
                    self.seed_dec()

                else:
                    raise NoViableAltException(self)
                self.state = 59 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 61
            self.mutant_dec()
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 65
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 62
                        self.notation_dec()
                        pass

                    elif la_ == 2:
                        self.state = 63
                        self.substTemplate_dec()
                        pass

                    elif la_ == 3:
                        self.state = 64
                        self.method_dec()
                        pass

             
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 70
            self.fuse_dec()
            self.state = 71
            self.match(SMTMRParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleSymbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predefSymbol(self):
            return self.getTypedRuleContext(SMTMRParser.PredefSymbolContext,0)


        def UndefinedSymbol(self):
            return self.getToken(SMTMRParser.UndefinedSymbol, 0)

        def getRuleIndex(self):
            return SMTMRParser.RULE_simpleSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleSymbol" ):
                listener.enterSimpleSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleSymbol" ):
                listener.exitSimpleSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleSymbol" ):
                return visitor.visitSimpleSymbol(self)
            else:
                return visitor.visitChildren(self)




    def simpleSymbol(self):

        localctx = SMTMRParser.SimpleSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_simpleSymbol)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 9, 10, 11, 12, 13, 14, 15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.predefSymbol()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(SMTMRParser.UndefinedSymbol)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredefSymbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PS_Not(self):
            return self.getToken(SMTMRParser.PS_Not, 0)

        def PS_Bool(self):
            return self.getToken(SMTMRParser.PS_Bool, 0)

        def PS_False(self):
            return self.getToken(SMTMRParser.PS_False, 0)

        def PS_Logic(self):
            return self.getToken(SMTMRParser.PS_Logic, 0)

        def PS_Theory(self):
            return self.getToken(SMTMRParser.PS_Theory, 0)

        def PS_True(self):
            return self.getToken(SMTMRParser.PS_True, 0)

        def PS_Sat(self):
            return self.getToken(SMTMRParser.PS_Sat, 0)

        def PS_Unsat(self):
            return self.getToken(SMTMRParser.PS_Unsat, 0)

        def PS_Unknown(self):
            return self.getToken(SMTMRParser.PS_Unknown, 0)

        def getRuleIndex(self):
            return SMTMRParser.RULE_predefSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredefSymbol" ):
                listener.enterPredefSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredefSymbol" ):
                listener.exitPredefSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredefSymbol" ):
                return visitor.visitPredefSymbol(self)
            else:
                return visitor.visitChildren(self)




    def predefSymbol(self):

        localctx = SMTMRParser.PredefSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_predefSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 65408) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredefKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PK_Gen(self):
            return self.getToken(SMTMRParser.PK_Gen, 0)

        def PK_Var(self):
            return self.getToken(SMTMRParser.PK_Var, 0)

        def PK_Cons(self):
            return self.getToken(SMTMRParser.PK_Cons, 0)

        def PK_Snippet(self):
            return self.getToken(SMTMRParser.PK_Snippet, 0)

        def PK_Seed(self):
            return self.getToken(SMTMRParser.PK_Seed, 0)

        def PK_Free(self):
            return self.getToken(SMTMRParser.PK_Free, 0)

        def PK_Bound(self):
            return self.getToken(SMTMRParser.PK_Bound, 0)

        def getRuleIndex(self):
            return SMTMRParser.RULE_predefKeyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredefKeyword" ):
                listener.enterPredefKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredefKeyword" ):
                listener.exitPredefKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredefKeyword" ):
                return visitor.visitPredefKeyword(self)
            else:
                return visitor.visitChildren(self)




    def predefKeyword(self):

        localctx = SMTMRParser.PredefKeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_predefKeyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 139637976727552) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UndefinedKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Colon(self):
            return self.getToken(SMTMRParser.Colon, 0)

        def simpleSymbol(self):
            return self.getTypedRuleContext(SMTMRParser.SimpleSymbolContext,0)


        def getRuleIndex(self):
            return SMTMRParser.RULE_undefinedKeyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUndefinedKeyword" ):
                listener.enterUndefinedKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUndefinedKeyword" ):
                listener.exitUndefinedKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUndefinedKeyword" ):
                return visitor.visitUndefinedKeyword(self)
            else:
                return visitor.visitChildren(self)




    def undefinedKeyword(self):

        localctx = SMTMRParser.UndefinedKeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_undefinedKeyword)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SMTMRParser.Colon)
            self.state = 82
            self.simpleSymbol()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SymbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleSymbol(self):
            return self.getTypedRuleContext(SMTMRParser.SimpleSymbolContext,0)


        def QuotedSymbol(self):
            return self.getToken(SMTMRParser.QuotedSymbol, 0)

        def getRuleIndex(self):
            return SMTMRParser.RULE_symbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbol" ):
                listener.enterSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbol" ):
                listener.exitSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbol" ):
                return visitor.visitSymbol(self)
            else:
                return visitor.visitChildren(self)




    def symbol(self):

        localctx = SMTMRParser.SymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_symbol)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 9, 10, 11, 12, 13, 14, 15, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.simpleSymbol()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(SMTMRParser.QuotedSymbol)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predefKeyword(self):
            return self.getTypedRuleContext(SMTMRParser.PredefKeywordContext,0)


        def undefinedKeyword(self):
            return self.getTypedRuleContext(SMTMRParser.UndefinedKeywordContext,0)


        def getRuleIndex(self):
            return SMTMRParser.RULE_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyword" ):
                listener.enterKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyword" ):
                listener.exitKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword" ):
                return visitor.visitKeyword(self)
            else:
                return visitor.visitChildren(self)




    def keyword(self):

        localctx = SMTMRParser.KeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_keyword)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40, 41, 42, 43, 44, 45, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.predefKeyword()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.undefinedKeyword()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PS_Sat(self):
            return self.getToken(SMTMRParser.PS_Sat, 0)

        def PS_Unsat(self):
            return self.getToken(SMTMRParser.PS_Unsat, 0)

        def PS_Unknown(self):
            return self.getToken(SMTMRParser.PS_Unknown, 0)

        def getRuleIndex(self):
            return SMTMRParser.RULE_status

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatus" ):
                listener.enterStatus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatus" ):
                listener.exitStatus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatus" ):
                return visitor.visitStatus(self)
            else:
                return visitor.visitChildren(self)




    def status(self):

        localctx = SMTMRParser.StatusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_status)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class B_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PS_True(self):
            return self.getToken(SMTMRParser.PS_True, 0)

        def PS_False(self):
            return self.getToken(SMTMRParser.PS_False, 0)

        def getRuleIndex(self):
            return SMTMRParser.RULE_b_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterB_value" ):
                listener.enterB_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitB_value" ):
                listener.exitB_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitB_value" ):
                return visitor.visitB_value(self)
            else:
                return visitor.visitChildren(self)




    def b_value(self):

        localctx = SMTMRParser.B_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_b_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==9 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Spec_constantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Numeral(self):
            return self.getToken(SMTMRParser.Numeral, 0)

        def Decimal(self):
            return self.getToken(SMTMRParser.Decimal, 0)

        def HexDecimal(self):
            return self.getToken(SMTMRParser.HexDecimal, 0)

        def Binary(self):
            return self.getToken(SMTMRParser.Binary, 0)

        def String(self):
            return self.getToken(SMTMRParser.String, 0)

        def b_value(self):
            return self.getTypedRuleContext(SMTMRParser.B_valueContext,0)


        def getRuleIndex(self):
            return SMTMRParser.RULE_spec_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec_constant" ):
                listener.enterSpec_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec_constant" ):
                listener.exitSpec_constant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec_constant" ):
                return visitor.visitSpec_constant(self)
            else:
                return visitor.visitChildren(self)




    def spec_constant(self):

        localctx = SMTMRParser.Spec_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_spec_constant)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(SMTMRParser.Numeral)
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(SMTMRParser.Decimal)
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.match(SMTMRParser.HexDecimal)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.match(SMTMRParser.Binary)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.match(SMTMRParser.String)
                pass
            elif token in [9, 12]:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.b_value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class S_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spec_constant(self):
            return self.getTypedRuleContext(SMTMRParser.Spec_constantContext,0)


        def symbol(self):
            return self.getTypedRuleContext(SMTMRParser.SymbolContext,0)


        def keyword(self):
            return self.getTypedRuleContext(SMTMRParser.KeywordContext,0)


        def ParOpen(self):
            return self.getToken(SMTMRParser.ParOpen, 0)

        def ParClose(self):
            return self.getToken(SMTMRParser.ParClose, 0)

        def s_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMTMRParser.S_exprContext)
            else:
                return self.getTypedRuleContext(SMTMRParser.S_exprContext,i)


        def getRuleIndex(self):
            return SMTMRParser.RULE_s_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS_expr" ):
                listener.enterS_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS_expr" ):
                listener.exitS_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitS_expr" ):
                return visitor.visitS_expr(self)
            else:
                return visitor.visitChildren(self)




    def s_expr(self):
